{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 102,
  "lineage": "12cc7e53-70cf-017f-1702-3b5cc688c7c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555411608053:subnet/subnet-b30762ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-b30762ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555411608053",
            "tags": {
              "Name": "Default subnet for us-west-2a"
            },
            "tags_all": {
              "Name": "Default subnet for us-west-2a"
            },
            "vpc_id": "vpc-399ea041"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555411608053:vpc/vpc-399ea041",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-c79b0abc",
            "default_route_table_id": "rtb-9ac6dde1",
            "default_security_group_id": "sg-422f0777",
            "dhcp_options_id": "dopt-8c99aef4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-399ea041",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-9ac6dde1",
            "owner_id": "555411608053",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "foundry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07d97a217bf8f3e09",
            "domain": "vpc",
            "id": "eipalloc-0a4ad0df1d80abaab",
            "instance": "i-0101b343047195467",
            "network_border_group": "us-west-2",
            "network_interface": "eni-089a8c62e716dd444",
            "private_dns": "ip-172-31-14-196.us-west-2.compute.internal",
            "private_ip": "172.31.14.196",
            "public_dns": "ec2-54-191-55-245.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.55.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_iam_instance_profile.foundry_profile",
            "aws_instance.foundry",
            "aws_key_pair.login",
            "aws_security_group.allow_http",
            "aws_security_group.ssh_from_home",
            "data.aws_ami.foundry_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "foundry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d64b5d6f5dcb9569",
            "arn": "arn:aws:ec2:us-west-2:555411608053:instance/i-0101b343047195467",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "foundry_profile",
            "id": "i-0101b343047195467",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "login",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089a8c62e716dd444",
            "private_dns": "ip-172-31-14-196.us-west-2.compute.internal",
            "private_ip": "172.31.14.196",
            "public_dns": "ec2-54-218-13-84.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.13.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b2cf7819bf1e66d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "ssh_from_home"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b30762ee",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a0157612683798c",
              "sg-08a67965b89c8bd67"
            ]
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_iam_instance_profile.foundry_profile",
            "aws_key_pair.login",
            "aws_security_group.allow_http",
            "aws_security_group.ssh_from_home",
            "data.aws_ami.foundry_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555411608053:security-group/sg-08a67965b89c8bd67",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a67965b89c8bd67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Audio/Video relay client ports",
                "from_port": 49152,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Audio/Video relay master port",
                "from_port": 33478,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 33478
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to Apache",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to Apache",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "555411608053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-399ea041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_from_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555411608053:security-group/sg-03a0157612683798c",
            "description": "Allow ssh inbound traffic from home",
            "egress": [],
            "id": "sg-03a0157612683798c",
            "ingress": [
              {
                "cidr_blocks": [
                  "68.3.67.47/32"
                ],
                "description": "SSH from home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_from_home",
            "name_prefix": "",
            "owner_id": "555411608053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_from_home"
            },
            "tags_all": {
              "Name": "allow_ssh_from_home"
            },
            "timeouts": null,
            "vpc_id": "vpc-399ea041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}